# SONGS-spectral-cube-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci_cd.yml  deploy_docs_to_pages.yml  docs.yml  tests.yml
PyPi/: publish.yml
docs/: diffuse_emission.md
docs/source/: conf.py  quickstart.rst  visualise.rst
notebooks/: Initialisation.ipynb  test.py
src/songs/: __init__.py  core.py  gui.py  test.py  utils.py  visualise.py
src/songs.egg-info/: PKG-INFO  SOURCES.txt
src/songs_astro.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_core.py  test_import.py
